--- a/views/producto/editar.twig
+++ b/views/producto/editar.twig
@@ -1711,9 +1711,15 @@
 							<button class="btn btn-success" type="button" name="btnExportarNegociacionManual" id="btnExportarNegociacionManual">
 								<i class="far fa-file-excel"></i> NEGOCIACIÓN MANUAL
 							</button>
+							<button class="btn btn-success" type="button" name="btnExportarNegociacionAutomatica" id="btnExportarNegociacionAutomatica">
+								<i class="far fa-file-excel"></i> NEGOCIACIÓN AUTOMÁTICA
+							</button>
 
 							<form id="exportFormNegociacionManual" method="POST" action="{{ root }}/producto/exportNegociacionManual">
 								<input type="hidden" id="jsonNegociacionManual" name="jsonNegociacionManual"/>
+							</form>
+							<form id="exportFormNegociacionAutomatica" method="POST" action="{{ root }}/producto/exportNegociacionAutomatica">
+								<input type="hidden" id="jsonNegociacionAutomatica" name="jsonNegociacionAutomatica"/>
 							</form>
 
 						</div>
@@ -2616,6 +2622,18 @@
 					};
 					$('#jsonNegociacionManual').val(JSON.stringify(data));
 					$('#exportFormNegociacionManual').submit();
+				});
+				$('#btnExportarNegociacionAutomatica').click(function () {
+					var data = {
+						model: self.model,
+						aplicativo_diners: self.aplicativo_diners,
+						aplicativo_diners_tarjeta_diners: self.aplicativo_diners_tarjeta_diners,
+						aplicativo_diners_tarjeta_discover: self.aplicativo_diners_tarjeta_discover,
+						aplicativo_diners_tarjeta_mastercard: self.aplicativo_diners_tarjeta_mastercard,
+						aplicativo_diners_tarjeta_interdin: self.aplicativo_diners_tarjeta_interdin,
+					};
+					$('#jsonNegociacionAutomatica').val(JSON.stringify(data));
+					$('#exportFormNegociacionAutomatica').submit();
 				});
 			}
 		});
