--- a/views/producto/editar.twig
+++ b/views/producto/editar.twig
@@ -1709,10 +1709,10 @@
 								<i class="fa fa-save"></i> GUARDAR
 							</button>
 							<button class="btn btn-success" type="button" name="btnExportarNegociacionManual" id="btnExportarNegociacionManual">
-								<i class="far fa-file-excel"></i> NEGOCIACIÓN MANUAL
+								<i class="fa fa-download"></i> NEGOCIACIÓN MANUAL
 							</button>
-							<button class="btn btn-success" type="button" name="btnExportarNegociacionAutomatica" id="btnExportarNegociacionAutomatica">
-								<i class="far fa-file-excel"></i> NEGOCIACIÓN AUTOMÁTICA
+							<button class="btn btn-info" type="button" name="btnExportarNegociacionAutomatica" id="btnExportarNegociacionAutomatica">
+								<i class="fa fa-download"></i> NEGOCIACIÓN AUTOMÁTICA
 							</button>
 
 							<form id="exportFormNegociacionManual" method="POST" action="{{ root }}/producto/exportNegociacionManual">
