--- a/views/admin/usuarios/edit.twig
+++ b/views/admin/usuarios/edit.twig
@@ -33,7 +33,7 @@
 
 						<label for="inputName" class="col-md-2 form-label">Nombres *</label>
 						<div class="col-md-4">
-							{{ text_field_tag("nombres", model.nombres, {class:'required form-control', placeholder:'Nombres'}) }}
+							{{ text_field_tag("model.nombres", model.nombres, {class:'required form-control', placeholder:'Nombres'}) }}
 						</div>
 					</div>
 
