- AGREGAR CAMPO TOTAL PENDIENTE -> SUMA DE LOS SALDOS FACTURADOS DESPUES DEL ABONO MOSTRAR DENTRO DE LA SECCION DE SALDOS FACTURDOS DESPUES DEL ABONO

--- a/views/producto/editar.twig
+++ b/views/producto/editar.twig
@@ -552,6 +552,10 @@
 												<td><strong>SALDO ACTUALES</strong></td>
 												<td><span v-html="aplicativo_diners_tarjeta_diners.saldo_actual_facturado_despues_abono"></span></td>
 											</tr>
+											<tr>
+												<td><strong>TOTAL PENDIENTE</strong></td>
+												<td style="background-color: #c3c3c3;"><span v-html="aplicativo_diners_tarjeta_diners.total_pendiente_facturado_despues_abono"></span></td>
+											</tr>
 											</tbody>
 										</table>
 										<br/>
@@ -902,6 +906,10 @@
 												<td><strong>SALDO ACTUALES</strong></td>
 												<td><span v-html="aplicativo_diners_tarjeta_interdin.saldo_actual_facturado_despues_abono"></span></td>
 											</tr>
+											<tr>
+												<td><strong>TOTAL PENDIENTE</strong></td>
+												<td style="background-color: #c3c3c3;"><span v-html="aplicativo_diners_tarjeta_interdin.total_pendiente_facturado_despues_abono"></span></td>
+											</tr>
 											</tbody>
 										</table>
 										<br/>
@@ -1241,6 +1249,10 @@
 												<td><strong>SALDO ACTUALES</strong></td>
 												<td><span v-html="aplicativo_diners_tarjeta_discover.saldo_actual_facturado_despues_abono"></span></td>
 											</tr>
+											<tr>
+												<td><strong>TOTAL PENDIENTE</strong></td>
+												<td style="background-color: #c3c3c3;"><span v-html="aplicativo_diners_tarjeta_discover.total_pendiente_facturado_despues_abono"></span></td>
+											</tr>
 											</tbody>
 										</table>
 										<br/>
@@ -1579,6 +1591,10 @@
 											<tr>
 												<td><strong>SALDO ACTUALES</strong></td>
 												<td><span v-html="aplicativo_diners_tarjeta_mastercard.saldo_actual_facturado_despues_abono"></span></td>
+											</tr>
+											<tr>
+												<td><strong>TOTAL PENDIENTE</strong></td>
+												<td style="background-color: #c3c3c3;"><span v-html="aplicativo_diners_tarjeta_mastercard.total_pendiente_facturado_despues_abono"></span></td>
 											</tr>
 											</tbody>
 										</table>
