--- a/views/producto/editar.twig
+++ b/views/producto/editar.twig
@@ -1910,10 +1910,10 @@
 			mounted: function () {
 				var self = this;
 
-                self.calcularValoresDiners();
-                self.calcularValoresInterdin();
-                self.calcularValoresDiscover();
-                self.calcularValoresMastercard();
+                // self.calcularValoresDiners();
+                // self.calcularValoresInterdin();
+                // self.calcularValoresDiscover();
+                // self.calcularValoresMastercard();
 
 				$("#alerta_abono_diners").hide();
 				$("#alerta_abono_interdin").hide();
