--- a/views/producto/lista.twig
+++ b/views/producto/lista.twig
@@ -16,7 +16,7 @@
 		{% for l in lista %}
 			<tr>
 				<td>
-					<a href="{{ root }}/producto/editar?id={{ l.id }}" target="_blank" class="btn btn-icon btn-info" title="Ingresar Seguimiento">
+					<a href="{{ root }}/producto/editar?id={{ l.id }}" target="_self" class="btn btn-icon btn-info" title="Ingresar Seguimiento">
 						<i class="fa fa-plus"></i>
 					</a>
 					<a href="{{ root }}/producto/verSeguimientos?id={{ l.id }}" target="_blank" class="btn btn-icon btn-success" title="Ver Seguimiento">
