--- a/views/producto/editar.twig
+++ b/views/producto/editar.twig
@@ -1826,7 +1826,7 @@
                         data: self.aplicativo_diners_tarjeta_diners,
                         aplicativo_diners_id: self.aplicativo_diners.id,
                     };
-                    self.aplicativo_diners_tarjeta_diners = [];
+                    // self.aplicativo_diners_tarjeta_diners = [];
                     $.post('{{ root }}/producto/calcularTarjetaDiners', data, function (res) {
                         self.aplicativo_diners_tarjeta_diners = res;
                         // console.log(self.aplicativo_diners_tarjeta_diners);
